# homegui

./: Cargo.toml  LICENSE  Makefile  README.md  config.toml.example
src/: main.rs
templates/: index.html
