[package]
name = "homegui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-std = "1.6"
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
rumqttc = "*"

dotenv = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
toml = "*"

tide = "*"
tempfile = "*"
handlebars = { version = "*", features = ["dir_source"] }
tide-handlebars = "*"
surf = "*"
http-types = "*"
openssl = { version = "0.10", features = ["vendored"] }
